final version with repo

--- a/Julia_Kudryavtseva_HW3(SingleShotDetector).ipynb
+++ b/Julia_Kudryavtseva_HW3(SingleShotDetector).ipynb
@@ -3072,6 +3072,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For more details: https://github.com/JuliaKudryavtseva/object_detection\n",
+    "\n",
     "Report: https://api.wandb.ai/links/juliakudryavtseva/zvayzvzv\n",
     "\n",
     "![image.png](attachment:image.png)"
